--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1;
+}
+textarea{
+  background: transparent;
+  border: none;
+  resize: none;
+  color: black;
+  border-left: 2px solid black;
+  padding: 10px;
+}
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -5,3 +18,33 @@
   border-radius: 0;
   border-bottom: 10px solid black;
 }
+.hour {
+  padding-top: 25px;
+  padding-left: 10px;
+  background-color: white;
+  color: black;
+  border-top: 1px dashed #000000;
+}
+
+.task {
+  white-space: pre-wrap;
+  background-color: rgb(197, 197, 197);
+}
+.row {
+  height: 70px;
+  border-top: 1px solid white;
+}
+.saveBtn {
+  border-left: 2px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #16b9dd;
+  color: white;
+}
+
+.saveBtn i:hover {
+  font-size: 30px;
+  transition: all .2s ease-in-out;
+}
+
+
