--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-size: 16px;
   line-height: 1;
 }
+/*The proprieties mentioned bellow characterize for the user task.*/
 textarea{
   background: transparent;
   border: none;
@@ -11,6 +12,9 @@ textarea{
   border-left: 2px solid black;
   padding: 10px;
 }
+
+/* The proprieties mentioned bellow characterize the elements in the header. */
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -18,6 +22,8 @@ textarea{
   border-radius: 0;
   border-bottom: 10px solid black;
 }
+
+/* The proprieties mentioned bellow make the hour to be centered and the top and bottom lines dashed. */
 .hour {
   padding-top: 25px;
   padding-left: 10px;
@@ -25,26 +31,30 @@ textarea{
   color: black;
   border-top: 1px dashed #000000;
 }
-
+/* The proprieties mentioned bellow characterize the user input that refers to the task. */
 .task {
   white-space: pre-wrap;
   background-color: rgb(197, 197, 197);
 }
+/* The row refers includes the hour, task, and save button. The bellow proprieties make the rows to have the height of 70px and to have white borders of 1px dimension between them. */
 .row {
-  height: 73px;
+  height: 70px;
   border-top: 1px solid white;
 }
+/* The save button style properties and attributes are mentioned bellow. */ 
 .saveBtn {
   border-left: 2px solid black;
+  /* This property create the round shape of the right top corner of the save button.  */
   border-top-right-radius: 15px;
+  /* This property create the round shape of the left bottom corner of the save button. */
   border-bottom-right-radius: 15px;
   background-color: #16b9dd;
   color: white;
 }
-
-.saveBtn i:hover {
-  font-size: 30px;
-  transition: all .2s ease-in-out;
+/* The bellow properties and attributes make the save button to become of 25 px size on hover. */
+.saveBtn:hover {
+  font-size: 25px;
+  transition: all .3s ease-in-out;
 }
 
 
