--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ textarea{
 /* The proprieties mentioned bellow characterize the user input that refers to the task. */
 .task {
   white-space: pre-wrap;
-  background-color: rgb(197, 197, 197);
+  background-color: #6dffb6;
 }
 /* The row refers includes the hour, task, and save button. The bellow proprieties make the rows to have the height of 70px and to have white borders of 1px dimension between them. */
 .row {
