--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ textarea{
 /* The proprieties mentioned bellow characterize the user input that refers to the task. */
 .task {
   white-space: pre-wrap;
-  background-color: #6dffb6;
+  background-color: #60dd9e;
 }
 /* The row refers includes the hour, task, and save button. The bellow proprieties make the rows to have the height of 70px and to have white borders of 1px dimension between them. */
 .row {
@@ -48,7 +48,7 @@ textarea{
   border-top-right-radius: 15px;
   /* This property create the round shape of the left bottom corner of the save button. */
   border-bottom-right-radius: 15px;
-  background-color: #16b9dd;
+  background-color: #0bb5db;
   color: white;
 }
 /* The bellow properties and attributes make the save button to become of 25 px size on hover. */
